Added Spotify API to backend + Playlist Fixes

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ EMAIL_USER=deniedaccess94@gmail.com
 EMAIL_PASS=yxzudveyowjhupgc\
 GOOGLE_CLIENT_ID=517474185886-t933l3m5ab8qqnb58oj1nvejjvmvf1ce.apps.googleusercontent.com
 
+SPOTIFY_CLIENT_ID=58947a34a45f4dc18eb10e648a34168f
+SPOTIFY_CLIENT_SECRET=f8cc29cfb4fb42bfa9934a9b5c3cbd77
+SPOTIFY_REDIRECT_URI=http://localhost:8000
