uploading profile images

--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,7 @@ GOOGLE_CLIENT_ID=517474185886-t933l3m5ab8qqnb58oj1nvejjvmvf1ce.apps.googleuserco
 SPOTIFY_CLIENT_ID=58947a34a45f4dc18eb10e648a34168f
 SPOTIFY_CLIENT_SECRET=f8cc29cfb4fb42bfa9934a9b5c3cbd77
 SPOTIFY_REDIRECT_URI=http://localhost:8000
+
+CLOUDINARY_CLOUD_NAME = ash1sh
+CLOUDINARY_API_KEY=	467987773262744
+CLOUDINARY_API_SECRET=yqXH0gFr019XhP-XNhVLP9_UUrg
