--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dist": "^0.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-spring": "^9.7.4",
     "react-toastify": "^10.0.6"
