fix bug in profile image

--- a/backend/.env
+++ b/backend/.env
@@ -13,6 +13,6 @@ SPOTIFY_CLIENT_ID=e3f407fee0e44ebbad5aa42f673c8781
 SPOTIFY_CLIENT_SECRET=cdf8883cd7cd42418126e6799dd39f28
 SPOTIFY_REDIRECT_URI=http://localhost:8000
 
-CLOUDINARY_CLOUD_NAME = ash1sh
-CLOUDINARY_API_KEY=	262584272152889
-CLOUDINARY_API_SECRET=akdyHkFJEW8Lef4C1poh6c2xb18
+CLOUDINARY_CLOUD_NAME = duuvdmb5k
+CLOUDINARY_API_KEY=	966613517928334
+CLOUDINARY_API_SECRET=K_5e5h1wLL884TNFxtwsVeG1BJM
